--- a/Desktop/tp-fe/src/assets/style/pagoEnvio.css
+++ b/Desktop/tp-fe/src/assets/style/pagoEnvio.css
@@ -1,15 +1,12 @@
-
 .contenedor-metodos {
   max-width: 600px;
-  margin : 60px auto;
+  margin: 60px auto;          /* centrado automático */
   background-color: rgba(255, 87, 87, 0.5);
   padding: 30px;
   border-radius: 12px;
-  margin-left: 1200px;
-  
 }
 
-h1{
+h1 {
   color: #ffd700;
   font-size: 30px;
 }
@@ -45,7 +42,7 @@ button:hover {
   color: #00ff90;
 }
 
-/* Estilos para el botón volver */
+/* Botón volver */
 #volver {
   background-color: transparent;
   border: 2px solid #ffd700;
