--- a/Desktop/tp-fe/src/assets/style/crudRegistro.css
+++ b/Desktop/tp-fe/src/assets/style/crudRegistro.css
@@ -2,7 +2,7 @@ body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #1a1a1a;
       color: #fff;
-      padding: 40px;
+      padding: 40px 20px;
     }
 
     h2 {
