--- a/Desktop/tp-fe/src/assets/style/registro.css
+++ b/Desktop/tp-fe/src/assets/style/registro.css
@@ -92,7 +92,7 @@ main {
   color: #000;
 }
 
-/* Responsividad */
+/* Responsividad *
 @media (max-width: 600px) {
   .formulario {
     padding: 20px;
